--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -9,7 +9,10 @@
    max-width: 612px;
    position: relative;
    overflow: hidden;
+   outline: none;
+   position: relative;
 }
+
 
 .imageBlock {
    float: left;
@@ -22,6 +25,17 @@
    z-index: 2;
    top: -2%;
    right: -15%;
+
+   /* position: absolute;
+   z-index: 2;
+   top: -2%;
+   right: 0%;
+   width: 55px;
+   height: 700px;
+   border: 2px solid rgb(214, 244, 250);
+   border-radius: 100% 0 0 100% / 50% 0 0 50%;
+   background: rgb(214, 244, 250);
+   outline: none; */
 }
 
 .imagePinkIcon {
@@ -34,6 +48,7 @@
 }
 
 .form {
+   width: 50%;
    padding: 62px 0px;
    display: flex;
    flex-direction: column;
@@ -73,10 +88,6 @@
 .formTitleImg {
    width: 36px;
    height: 33px;
-}
-
-.form {
-   width: 50%;
 }
 
 @media(max-width:768px) {
